--- a/docs/CustomHTML/styles/hero-slider.css
+++ b/docs/CustomHTML/styles/hero-slider.css
@@ -42,6 +42,20 @@
     margin: 1.5rem auto; /* Bringt mehr Luft zwischen Button & Titel. */
 }
 
+.hero-image{
+    object-fit: cover;
+    object-position: center;
+    height: 95vh;
+}
+
+.title-on-img{
+    position: absolute;
+}
+
+.showcase picture {
+    width: 100vw; /* Bug-Fix: otherwise, the hero-image has not the full-width! */
+}
+
 @media screen and (max-width: 340px){
     .showcase h1{
         font-size: min(2rem, 8vh);
