still not centered, so I tried fireship's solution.

--- a/docs/CustomHTML/styles/hero-slider.css
+++ b/docs/CustomHTML/styles/hero-slider.css
@@ -51,7 +51,8 @@
 .title-on-img{
     position: absolute;
     left: 50%;
-    transform: translate(-50%, 0);
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .showcase picture {
