still not in the center, so I tried it with flexbox.

--- a/docs/CustomHTML/styles/hero-slider.css
+++ b/docs/CustomHTML/styles/hero-slider.css
@@ -49,10 +49,15 @@
 }
 
 .title-on-img{
-    position: absolute;
+    /* position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .showcase picture {
