--- a/docs/CustomHTML/styles/hero-slider.css
+++ b/docs/CustomHTML/styles/hero-slider.css
@@ -49,15 +49,10 @@
 }
 
 .title-on-img{
-    /* position: absolute;
+    position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%); */
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    transform: translate(-50%, -50%);
 }
 
 .showcase picture {
