--- a/static/CustomHTML/styles/hero-slider.css
+++ b/static/CustomHTML/styles/hero-slider.css
@@ -1,3 +1,8 @@
+:root { 
+    --transparent-subtitle-color: rgba(255, 255, 255, 0.5);
+    --non-transparent-subtitle-color: #fff;
+}
+
 .showcase-wrapper {
     height: 95vh; /* Full-Screen height. */
     position: relative; /* This is needed in order to be able to position the 3 Dots that will give a hint to the user at which slide he currently is. */
@@ -37,7 +42,7 @@
 }
 
 .showcase h1 {
-    font-size: min(76px, 10vw);
+    font-size: min(70px, 10vw);
     width: min(600px, 90vw);
     margin: 1.5rem auto; /* Bringt mehr Luft zwischen Button & Titel. */
 }
@@ -55,8 +60,55 @@
     transform: translate(-50%, -50%);
 }
 
+.subtitle-on-img {
+    /* border: 2.5px solid #fff; */
+    color: rgba(255, 255, 255, 0.9);
+    font-style: italic;
+    font-family: inherit;
+    text-transform: uppercase;
+    padding: 0.8rem 1.4rem;
+    outline: 0;
+    display: inline-block;
+}
+
+@media screen and (min-width: 992px){
+    .subtitle-on-img{
+        font-size: 1.05rem;
+    }
+}
+
 .showcase picture {
     width: 100vw; /* Bug-Fix: otherwise, the hero-image has not the full-width! */
+}
+
+.black-gradient picture:after { /* Dadurch wird ein pseudo-element kreiert, welches einen dunkleren Farb-Gradienten über die Hero-Images legt. */
+    content:'';
+    position:absolute;
+    left:0; top:0;
+    width:100%; height:100%;
+    display:inline-block; /*rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5)*/
+    background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.5) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0, 0, 0, 0.5)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.4) 0%,rgba(0, 0, 0, 0.5) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgba(0, 0, 0, 0.4) 0%,rgba(0, 0, 0, 0.5) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.4) 0%,rgba(0, 0, 0, 0.5) 100%); /* IE10+ */
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%,rgba(0, 0, 0, 0.5) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+}
+
+.brighter-black-gradient picture:after { /* Dadurch wird ein pseudo-element kreiert, welches einen dunkleren Farb-Gradienten über die Hero-Images legt. */
+    content:'';
+    position:absolute;
+    left:0; top:0;
+    width:100%; height:100%;
+    display:inline-block; /*rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5)*/
+    background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.3) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0, 0, 0, 0.1)), color-stop(100%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%,rgba(0, 0, 0, 0.3) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%,rgba(0, 0, 0, 0.3) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%,rgba(0, 0, 0, 0.3) 100%); /* IE10+ */
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%,rgba(0, 0, 0, 0.3) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 }
 
 @media screen and (max-width: 340px){
